CDN Tailwind et structure scss

--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ma première page web</title>
-  <link rel="stylesheet" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css" />
+  <title>Visiter le Québec</title>
+  <link rel="stylesheet" href="./style/css/normalize.css" />
+  <link rel="stylesheet" href="./style/css/style.css" />
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="#" defer></script>
-
+<!-- TODO faire head -->
 </head>
 
 <body>
-  <!-- Élément <div> qui sert à center le contenu dans la page (container) -->
   <div class="container">
-    <!-- Vous devez ajouter vos balises sous ce commentaire -->
+
+    <header></header>
+    <main>
+      <section></section>
+    </main>
+    <footer></footer>
 
   </div>
 </body>
