Ajouter formulaire et validation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./style/css/normalize.css" />
   <link rel="stylesheet" href="./style/css/style.css" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="#" defer></script>
+  <script src="./script/script.js" defer></script>
 <!-- TODO faire head -->
 </head>
 
