--- a/page2.html
+++ b/page2.html
@@ -18,20 +18,23 @@
   <div class="container grid grid-cols-12 mx-auto">
 
     <header class="col-span-12 w-full text-gray-700 bg-white border-t border-gray-100 shadow-sm body-font">
-      <div class="flex flex-col flex-wrap items-center p-5 mx-auto md:flex-row">
+      <div class="container flex flex-col flex-wrap items-center p-5 mx-auto md:flex-row">
+
         <!-- TODO changer nom des tabs -->
         <nav class="flex flex-wrap items-center text-base lg:w-2/5 md:ml-auto">
-          <a href="index.html" class="mr-5 text-xl header__link--active underline underline-offset-8">Home</a>
-          <a href="page2.html" class="mr-5 text-xl header__link hover:underline hover:underline-offset-8">About</a>
+          <a href="index.html" class="mr-5 text-xl header__link hover:underline hover:underline-offset-8">Home</a>
+          <a href="page2.html" class="mr-5 text-xl header__link--active underline underline-offset-8">About</a>
           <a href="contact-us.html" class="text-xl header__link hover:underline hover:underline-offset-8">Contact</a>
         </nav>
-        <h1 class="header__logo text-6xl flex items-center order-first mb-4 md:mb-0">Visiter le Québec</h1>
+        <a href="index.html" class="header__logo text-5xl flex items-center order-first mb-4 md:mb-0">
+          Visiter le Québec</a>
+
+
       </div>
     </header>
     <main>
-      <section>
-        <h2>Hidden</h2>
-        Galerie photo
+      <section>Page 2
+
       </section>
       <section></section>
       <section></section>
@@ -92,6 +95,7 @@
         </div>
       </div>
     </footer>
+
   </div>
 </body>
 
