Correction du footer

--- a/contact-us.html
+++ b/contact-us.html
@@ -144,7 +144,7 @@
       <hr class="my-6 border-gray-100 dark:border-gray-700 lg:my-8 shadow-sm">
       <div class="flex flex-col flex-wrap items-center px-5 mx-auto md:flex-row md:justify-between mb-6 lg:m-8">
         <div class="flex flex-col lg:flex-row items-center md:items-start order-first mb-4 md:mb-0">
-          <span class="text-sm text-gray-500 mr-5">Isabelle Lanlois</span>
+          <span class="text-sm text-gray-500 mr-5">Isabelle langlois</span>
           <span class="text-sm text-gray-500 mr-5">Technique d'intégration des interfaces Web 2</span>
           <span class="text-sm text-gray-500 ">Cegep de Trois-Rivières</span>
         </div>
