Ajout  du manifest

--- a/confirmation.html
+++ b/confirmation.html
@@ -3,12 +3,20 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="" content="">
+  <meta name="Visiter le Québec" content="Page de confirmation de votre envoie d'information">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+  <meta name="theme-color">
   <!-- TODO Modifier titre et description sur chaque page -->
   <title>Visiter le Québec</title>
   <link rel="stylesheet" href="./style/css/normalize.css">
   <link rel="stylesheet" href="./style/css/style.css">
+  <link rel="manifest" href="manifest.json">
+  <!-- Add iOS meta tags and icons -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Shrek app">
+  <link rel="apple-touch-icon" href="./img/icons-manifest/shrek192.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="./script/script.js" defer></script>
   <!-- TODO ajouter favicon 32x32 valider avec  -->
