Correction 3 for meta theme-color for lighthouse

--- a/confirmation.html
+++ b/confirmation.html
@@ -6,7 +6,7 @@
   <meta name="Visiter le Québec" content="Page de confirmation de votre envoie d'information">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-  <meta name="theme_color" content="#1472bf">
+  <meta name="theme-color" content="#1472bf">
   <!-- TODO Modifier titre et description sur chaque page -->
   <title>Visiter le Québec</title>
   <link rel="stylesheet" href="./style/css/normalize.css">
