--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     content="Vous trouverez une foule d'information nécessaire à la planification d'un road trip au Québec">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-  <meta name="theme-color" content="#1472bf">
+  <meta name="theme-color" content="#1472BF">
   <!-- TODO Modifier titre et description sur chaque page -->
   <title>Visiter le Québec</title>
   <link rel="stylesheet" href="./style/css/normalize.css">
