--- a/page2.html
+++ b/page2.html
@@ -15,8 +15,8 @@
   <link rel="manifest" href="manifest.json">
   <!-- Add iOS meta tags and icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Shrek app">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#1472BF">
+  <meta name="apple-mobile-web-app-title" content="VisitQc PWA">
   <link rel="apple-touch-icon" href="./img/icons-manifest/shrek192.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="./script/script.js" defer></script>
