--- a/confirmation.html
+++ b/confirmation.html
@@ -16,7 +16,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="#1472BF">
   <meta name="apple-mobile-web-app-title" content="VisitQc PWA">
-  <link rel="apple-touch-icon" href="./img/icons-manifest/shrek192.png">
+  <link rel="apple-touch-icon" href="./img/icons-manifest/logo192.jpg">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="./script/script.js" defer></script>
   <!-- TODO ajouter favicon 32x32 valider avec  -->
