--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="#1472BF">
   <meta name="apple-mobile-web-app-title" content="VisitQc PWA">
-  <link rel="apple-touch-icon" href="./img/icons-manifest/logo192.jpg">
+  <link rel="apple-touch-icon" href="./img/icons-manifest/logo192.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="./script/script.js" defer></script>
   <script src="./script/carousel.js" defer></script>
