--- a/contact-us.html
+++ b/contact-us.html
@@ -8,11 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <meta name="theme-color" content="#1472BF">
-  <!-- TODO Modifier titre et description sur chaque page -->
   <title>Visiter le Québec</title>
   <link rel="stylesheet" href="./style/css/normalize.css">
   <link rel="stylesheet" href="./style/css/style.css">
   <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="favicon.png">
   <!-- Add iOS meta tags and icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="#1472BF">
@@ -20,7 +20,6 @@
   <link rel="apple-touch-icon" href="./img/icons-manifest/logo192.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="./script/script.js" defer></script>
-  <!-- TODO ajouter favicon 32x32 valider avec  -->
 </head>
 
 <body>
@@ -28,7 +27,6 @@
     <header class="col-span-12 w-full text-gray-700 bg-white border-t border-gray-100 shadow-sm body-font">
       <div class="container flex flex-col flex-wrap items-center p-5 mx-auto md:flex-row">
 
-        <!-- TODO changer nom des tabs -->
         <nav class="flex flex-wrap items-center text-base lg:w-2/5 md:ml-auto">
           <a href="index.html" class="mr-5 text-xl header__link hover:underline hover:underline-offset-8">Home</a>
           <a href="page2.html" class="mr-5 text-xl header__link hover:underline hover:underline-offset-8">About</a>
@@ -53,8 +51,6 @@
           <!-- <form id="form" name="form" class=" mt-10" action="confirmation.html" onsubmit="return validateForm()" method="post" novalidate> -->
           <form id="form" name="form" class=" mt-10" action="confirmation.html" onsubmit="return validateForm()"
             novalidate>
-            <!-- Inspiré de https://tailwindcomponents.com/component/floating-label-contact-form -->
-            <!-- TODO ??? grid est en base 2 du component dois-je la convertir en base 12? -->
             <h3 class="my-5">Vos informations:</h3>
             <div class="grid gap-6 md:grid-cols-2">
               <div class="relative z-0">
