--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="./style/css/normalize.css">
   <link rel="stylesheet" href="./style/css/style.css">
   <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="favicon.png">
   <!-- Add iOS meta tags and icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="#1472BF">
@@ -22,7 +23,7 @@
   <script src="./script/script.js" defer></script>
   <script src="./script/carousel.js" defer></script>
   <script src="./service-worker.js" defer></script>
-  <script>
+  <!-- <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
         navigator.serviceWorker.register('service-worker.js')
@@ -31,9 +32,8 @@
           });
       });
     }
-  </script>
+  </script> -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet" />
-  <!-- TODO ajouter favicon 32x32 valider avec  -->
 </head>
 
 <body>
