--- a/offline.html
+++ b/offline.html
@@ -28,9 +28,10 @@
       <div class="container flex flex-col flex-wrap items-center p-5 mx-auto md:flex-row">
 
         <nav class="flex flex-wrap items-center text-base lg:w-2/5 md:ml-auto">
-          <a href="index.html" class="mr-5 text-xl header__link hover:underline hover:underline-offset-8">Home</a>
-          <a href="page2.html" class="mr-5 text-xl header__link hover:underline hover:underline-offset-8">About</a>
-          <a href="contact-us.html" class="text-xl header__link hover:underline hover:underline-offset-8">Contact</a>
+          <a href="index.html" class="mr-5 text-xl header__link hover:underline hover:underline-offset-8">Accueil</a>
+          <a href="ou-aller.html" class="mr-5 text-xl header__link hover:underline hover:underline-offset-8">Où
+            aller</a>
+          <a href="quoi-faire.html" class="text-xl header__link hover:underline hover:underline-offset-8">Quoi-faire</a>
         </nav>
         <a href="index.html" class="header__logo text-5xl flex items-center order-first mb-4 md:mb-0">
           Visiter le Québec</a>
