gallerie photo page quoi-faire

--- a/quoi-faire.html
+++ b/quoi-faire.html
@@ -191,7 +191,123 @@
     <div class="col-span-12 md:col-span-8 lg:col-span-9 2xl:col-span-10">
 
       <!-- Section gallerie photo -->
-      <section class="shadow-lg rounded-lg p-6">Gallerie photo</section>
+      <section>
+
+        <!-- Gallerie carrousel petit écran -->
+        <div class="lg:hidden p-6">
+          <div id="default-carousel" class="relative w-full" data-carousel="slide">
+            <!-- Carousel wrapper -->
+            <div class="relative h-[360px] sm:h-[400px] md:h-[320px] overflow-hidden rounded-lg">
+              <!-- Item 1 -->
+              <div id="carousel-item-1" class="hidden duration-700 ease-in-out" data-carousel-item>
+                <img class="  absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 rounded-lg"
+                  src="./img/gallerie/chaises-rouges-900x600.jpg" alt="Les célèbres chaises rouges de Parc Canada">
+              </div>
+              <!-- Item 2 -->
+              <div id="carousel-item-2" class="hidden duration-700 ease-in-out rounded-lg" data-carousel-item>
+                <img class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 rounded-lg"
+                  src="./img/gallerie/baie-johan-beetz.jpg" alt="Côte Nord, Village Baie de Johan Beetz">
+              </div>
+              <!-- Item 3 -->
+              <div id="carousel-item-3" class="hidden duration-700 ease-in-out" data-carousel-item>
+                <img class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 rounded-lg"
+                  src="./img/gallerie/embouchure.jpg" alt="Paysage bord de l'eau représentant une embouchure">
+              </div>
+              <!-- Item 4 -->
+              <div id="carousel-item-4" class="hidden duration-700 ease-in-out" data-carousel-item>
+                <img src="./img/gallerie/la-grave-900x600.jpg"
+                  class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 rounded-lg"
+                  alt="Site touristique La Grave">
+              </div>
+              <!-- Item 5 -->
+              <div id="carousel-item-5" class="hidden duration-700 ease-in-out" data-carousel-item>
+                <img src="./img/gallerie/ile-perdu.jpg"
+                  class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 rounded-lg"
+                  alt="Paysage d'une ile de la Côte nord perdu dans le brouillard">
+              </div>
+
+            </div>
+            <!-- Slider indicators -->
+            <div class="absolute z-30 flex space-x-3 -translate-x-1/2 bottom-5 left-1/2">
+              <button id="carousel-indicator-1" type="button" class="w-3 h-3 rounded-full" aria-current="true"
+                aria-label="Slide 1" data-carousel-slide-to="0"></button>
+              <button id="carousel-indicator-2" type="button" class="w-3 h-3 rounded-full" aria-current="false"
+                aria-label="Slide 2" data-carousel-slide-to="1"></button>
+              <button id="carousel-indicator-3" type="button" class="w-3 h-3 rounded-full" aria-current="false"
+                aria-label="Slide 3" data-carousel-slide-to="2"></button>
+              <button id="carousel-indicator-4" type="button" class="w-3 h-3 rounded-full" aria-current="false"
+                aria-label="Slide 4" data-carousel-slide-to="3"></button>
+              <button id="carousel-indicator-5" type="button" class="w-3 h-3 rounded-full" aria-current="false"
+                aria-label="Slide 5" data-carousel-slide-to="4"></button>
+            </div>
+            <!-- Slider controls -->
+            <button type="button"
+              class="absolute top-0 left-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
+              data-carousel-prev>
+              <span
+                class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+                <svg class="w-4 h-4 text-white dark:text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                  fill="none" viewBox="0 0 6 10">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M5 1 1 5l4 4" />
+                </svg>
+                <span class="sr-only">Previous</span>
+              </span>
+            </button>
+            <button type="button"
+              class="absolute top-0 right-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
+              data-carousel-next>
+              <span
+                class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+                <svg class="w-4 h-4 text-white dark:text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                  fill="none" viewBox="0 0 6 10">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="m1 9 4-4-4-4" />
+                </svg>
+                <span class="sr-only">Next</span>
+              </span>
+            </button>
+          </div>
+        </div>
+
+        <!-- Gallerie grid grand écran -->
+        <div class="hidden lg:block">
+          <div class=" shadow-lg rounded-lg p-6 grid grid-cols-12 gap-6">
+            <div class="col-span-4 col-start-9 row-start-3 row-span-2">
+              <img class="h-auto max-w-full rounded-lg" src="./img/gallerie/baie-johan-beetz.jpg"
+                alt="Côte Nord, Village Baie de Johan Beetz">
+            </div>
+            <div class="col-span-6 col-start-4 row-span-2 row-start-1 flex flex justify-end">
+              <img class="h-auto max-w-full rounded-lg " src="./img/gallerie/chaises-rouges-900x600.jpg"
+                alt="Les célèbres chaises rouges de Parc Canada">
+            </div>
+            <div class="col-span-4 col-start-4 row-start-5">
+              <img class="h-auto max-w-full rounded-lg" src="./img/gallerie/embouchure.jpg"
+                alt="Paysage bord de l'eau représentant une embouchure">
+            </div>
+            <div class="col-span-5 col-start-4 row-start-3 row-span-2">
+              <img class="h-auto max-w-full rounded-lg" src="./img/gallerie/ile-perdu.jpg"
+                alt="Paysage d'une ile de la Côte nord perdu dans le brouillard">
+            </div>
+            <div class="col-span-4 col-start-8 row-start-5">
+              <img class="h-auto max-w-full rounded-lg" src="./img/gallerie/la-grave-900x600.jpg"
+                alt="Site touristique La Grave">
+            </div>
+            <div class="col-span-3 col-start-10 row-start-1 row-span-2 flex flex-col justify-end">
+              <img class="h-auto max-w-full rounded-lg" src="./img/gallerie/loin-de-tout-600.jpg"
+                alt="Côte Nord, panneau indiquant les distances avec quelques grandes villes">
+            </div>
+            <div class="col-span-3 col-start-1 row-span-2 row-start-4">
+              <img class="h-auto max-w-full rounded-lg" src="./img/gallerie/monolith.jpg"
+                alt="Monolithe de l'archipel de Mingan">
+            </div>
+            <div class="col-span-3 col-start-1 row-start-1 row-end-4 flex flex-col justify-center">
+              <img class="h-auto max-w-full rounded-lg" src="./img/gallerie/vl-quarry-600x900.jpg"
+                alt="Voie lactée, prise de l'ile Quarry">
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- Section circuits -->
       <section class="shadow-lg rounded-lg p-6">
