--- a/ou-aller.html
+++ b/ou-aller.html
@@ -341,8 +341,9 @@
 
     <!-- Section formulaire -->
     <section class='container grid grid-cols-12 mx-auto mt-8' id="vos-spots">
-      <!-- TODO corriger taille du texte responsive -->
-      <h2 class="col-span-12 title-accent text-center text-5xl my-8">Pour faire connaitre l'un de vos endroits préférez,
+      <h2 class="col-span-12 title-accent text-center text-4xl xl:text-5xl my-8 mx-1">Pour faire connaitre l'un de vos
+        endroits
+        préférez,
         par ici</h2>
 
       <div class="col-span-12 px-10">
@@ -432,7 +433,18 @@
             </div>
           </div>
 
-          <div class="flex justify-center md:justify-end">
+          <div class="flex justify-between">
+            <div class="flex items-start mb-6 self-center ">
+              <div class="flex items-center h-5">
+                <input id="infoletter" aria-describedby="infoletter" type="checkbox"
+                  class="bg-gray-50 border-gray-300 focus:ring-3 focus:ring-blue-300 h-4 w-4 rounded" required="">
+              </div>
+              <div class="text-sm ml-3">
+                <label for="infoletter" class="font-medium text-gray-900 text-lg text-gray-500 pb-1">J'aimerais
+                  m'inscrire à
+                  l'infolettre</label>
+              </div>
+            </div>
             <input type="submit" class="mt-5 rounded-full bg-blue-600 hover:bg-blue-800 px-12 py-4 text-white"
               value="Soumettre" />
           </div>
