--- a/ou-aller.html
+++ b/ou-aller.html
@@ -47,9 +47,7 @@
     <!-- Section bandeau -->
     <section class='container grid grid-cols-12 mx-auto'>
       <div class="col-span-12 my-8 flex items-center">
-        <!-- TODO mettre un de mes photos -->
-        <div class="w-full bg-cover bg-center py-32"
-          style="background-image: url('https://source.unsplash.com/random');">
+        <div class="w-full bg-cover bg-bottom py-32" style="background-image: url(./img/bandeau/idm-mademoiselle.jpg);">
           <div class="container mx-auto text-center text-white">
             <h1 class="text-5xl font-medium mb-20 title-accent">Toutes les régions du Québec sont magnifiques</h1>
 
