--- a/quoi-faire.html
+++ b/quoi-faire.html
@@ -390,7 +390,8 @@
 
       <!-- Randonnée -->
       <div
-        class="col-span-12 sm:col-span-10 sm:col-start-2 lg:col-span-6 lg:col-start-auto xl:col-span-4 2xl:col-span-3 py-4 px-8 shadow-lg rounded-lg mt-10">
+        class="col-span-12 sm:col-span-10 sm:col-start-2 lg:col-span-6 lg:col-start-auto xl:col-span-4 2xl:col-span-3 py-4 px-8 shadow-lg rounded-lg mt-10 bg-cover"
+        style="background-image: url(./img/bg-card/randonnee.jpg);">
         <div class="flex justify-center gap-x-2 md:justify-end -mt-10">
           <img class="w-12 h-12 object-cover rounded-full border-2 border-indigo-500"
             src="./img/pastilles/Saison-ete.png">
@@ -402,8 +403,8 @@
             src="./img/pastilles/Saison-hiver.png">
         </div>
         <div>
-          <h2 class="text-gray-800 text-3xl font-semibold">Randonnée</h2>
-          <p class="mt-2 text-gray-600">La randonnée en pleine nature offre une excellente opportunité de se ressourcer
+          <h2 class="text-white text-3xl font-semibold">Randonnée</h2>
+          <p class="mt-2 text-white">La randonnée en pleine nature offre une excellente opportunité de se ressourcer
             tout en explorant de magnifiques
             paysages.</p>
         </div>
@@ -426,42 +427,7 @@
       </div>
 
 
-      <!-- Photographie -->
-      <div
-        class="col-span-12 sm:col-span-10 sm:col-start-2 lg:col-span-6 lg:col-start-auto xl:col-span-4 2xl:col-span-3 py-4 px-8 shadow-lg rounded-lg mt-10">
-        <div class="flex justify-center gap-x-2 md:justify-end -mt-10">
-          <img class="w-12 h-12 object-cover rounded-full border-2 border-indigo-500"
-            src="./img/pastilles/Saison-ete.png">
-          <img class="w-12 h-12 object-cover rounded-full border-2 border-indigo-500"
-            src="./img/pastilles/Saison-printemps.png">
-          <img class="w-12 h-12 object-cover rounded-full border-2 border-indigo-500"
-            src="./img/pastilles/Saison-automne.png">
-          <img class="w-12 h-12 object-cover rounded-full border-2 border-indigo-500"
-            src="./img/pastilles/Saison-hiver.png">
-        </div>
-        <div>
-          <h2 class="text-gray-800 text-3xl font-semibold">Photographie</h2>
-          <p class="mt-2 text-gray-600">La photographie permet de capturer des moments uniques et de partager des
-            histoires à travers l'objectif de l'appareil
-            photo.</p>
-        </div>
-      </div>
 
-      <!-- Paddle board -->
-      <div
-        class="col-span-12 sm:col-span-10 sm:col-start-2 lg:col-span-6 lg:col-start-auto xl:col-span-4 2xl:col-span-3 py-4 px-8 shadow-lg rounded-lg mt-10">
-        <div class="flex justify-center md:justify-end -mt-10">
-          <img class="w-12 h-12 object-cover rounded-full border-2 border-indigo-500"
-            src="./img/pastilles/Saison-ete.png">
-        </div>
-        <div>
-          <h2 class="text-gray-800 text-3xl font-semibold">Planches à pagaie</h2>
-          <p class="mt-2 text-gray-600">La planche à pagaie offre une manière apaisante de naviguer sur l'eau tout en
-            renforçant son corps et en profitant de la
-            nature environnante.
-          </p>
-        </div>
-      </div>
 
       <!-- Escalade -->
       <div
@@ -519,6 +485,28 @@
         </div>
       </div>
 
+      <!-- Photographie -->
+      <div
+        class="col-span-12 sm:col-span-10 sm:col-start-2 lg:col-span-6 lg:col-start-auto xl:col-span-4 2xl:col-span-3 py-4 px-8 shadow-lg rounded-lg mt-10 bg-cover"
+        style="background-image: url(./img/bg-card/debout.jpg);">
+        <div class="flex justify-center gap-x-2 md:justify-end -mt-10">
+          <img class="w-12 h-12 object-cover rounded-full border-2 border-indigo-500"
+            src="./img/pastilles/Saison-ete.png">
+          <img class="w-12 h-12 object-cover rounded-full border-2 border-indigo-500"
+            src="./img/pastilles/Saison-printemps.png">
+          <img class="w-12 h-12 object-cover rounded-full border-2 border-indigo-500"
+            src="./img/pastilles/Saison-automne.png">
+          <img class="w-12 h-12 object-cover rounded-full border-2 border-indigo-500"
+            src="./img/pastilles/Saison-hiver.png">
+        </div>
+        <div>
+          <h2 class="text-white text-3xl font-semibold">Photographie</h2>
+          <p class="mt-2 text-white">La photographie permet de capturer des moments uniques et de partager des
+            histoires à travers l'objectif de l'appareil
+            photo.</p>
+        </div>
+      </div>
+
       <!-- Équitation -->
       <div
         class="col-span-12 sm:col-span-10 sm:col-start-2 lg:col-span-6 lg:col-start-auto xl:col-span-4 2xl:col-span-3 py-4 px-8 shadow-lg rounded-lg mt-10">
@@ -534,6 +522,23 @@
           <h2 class="text-gray-800 text-3xl font-semibold">Équitation</h2>
           <p class="mt-2 text-gray-600">L'équitation au Québec offre une expérience équestre exceptionnelle, avec ses
             magnifiques paysages et ses sentiers pittoresques.</p>
+        </div>
+      </div>
+
+      <!-- Paddle board -->
+      <div
+        class="col-span-12 sm:col-span-10 sm:col-start-2 lg:col-span-6 lg:col-start-auto xl:col-span-4 2xl:col-span-3 py-4 px-8 shadow-lg rounded-lg mt-10 bg-cover bg-center"
+        style="background-image: url(./img/bg-card/paddle-board.jpg);">
+        <div class="flex justify-center md:justify-end -mt-10">
+          <img class="w-12 h-12 object-cover rounded-full border-2 border-indigo-500"
+            src="./img/pastilles/Saison-ete.png">
+        </div>
+        <div>
+          <h2 class="text-white text-3xl font-semibold">Planches à pagaie</h2>
+          <p class="mt-2 text-white">La planche à pagaie offre une manière apaisante de naviguer sur l'eau tout en
+            renforçant son corps et en profitant de la
+            nature environnante.
+          </p>
         </div>
       </div>
 
