--- a/confirmation.html
+++ b/confirmation.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="Visiter le Québec" content="Page de confirmation de votre envoie d'information">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- TODO Vérifier erreur validation -->
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <meta name="theme-color" content="#1472BF">
   <title>Visiter le Québec</title>
@@ -23,11 +24,9 @@
 
 <body class="flex flex-col h-screen">
 
-
   <header class="container grid grid-cols-12 mx-auto">
     <div class="col-span-12 w-full text-gray-700 bg-white border-t border-gray-100 shadow-sm body-font">
       <div class="flex flex-col flex-wrap items-center p-5 mx-auto md:flex-row">
-
         <nav class="flex flex-wrap items-center text-base lg:w-2/5 md:ml-auto">
           <a href="index.html" class="mr-5 text-xl header__link hover:underline hover:underline-offset-8">Accueil</a>
           <a href="ou-aller.html" class="mr-5 text-xl header__link hover:underline hover:underline-offset-8">Où
@@ -36,9 +35,8 @@
         </nav>
         <a href="index.html" class="header__logo text-5xl flex items-center order-first mb-4 md:mb-0">
           Visiter le Québec</a>
-
-
       </div>
+    </div>
   </header>
 
   <main class="h-full container grid grid-cols-12 mx-auto">
@@ -101,6 +99,7 @@
           </a>
         </div>
       </div>
+    </div>
   </footer>
 
 </body>
