Ajout bouton install PWA

--- a/ou-aller.html
+++ b/ou-aller.html
@@ -21,6 +21,7 @@
   <link rel="apple-touch-icon" href="./img/icons-manifest/logo192.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="./script/script.js" defer></script>
+  <script src="./script/install.js" defer></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.css" rel="stylesheet">
 </head>
 
@@ -432,6 +433,14 @@
           </div>
         </form>
       </div>
+    </section>
+
+    <section class='container grid grid-cols-12 mx-auto mt-8 p-6'>
+
+      <button
+        class="nav-link col-span-8 col-start-3 mt-5 rounded-full bg-blue-600 hover:bg-blue-800 focus:bg-blue-800 px-12 py-4 text-white"
+        id="installBtn" aria-label="installBtn" hidden>Installer Visiter le Québec</button>
+
     </section>
 
   </main>
