--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link rel="apple-touch-icon" href="./img/icons-manifest/logo192.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="./script/script.js" defer></script>
+  <script src="./script/install.js" defer></script>
   <script src="./script/carousel.js" defer></script>
   <script src="./service-worker.js" defer></script>
   <!-- <script>
@@ -288,6 +289,15 @@
       </div>
 
     </section>
+
+    <section class='container grid grid-cols-12 mx-auto mt-8 p-6'>
+
+      <button
+        class="nav-link col-span-8 col-start-3 mt-5 rounded-full bg-blue-600 hover:bg-blue-800 focus:bg-blue-800 px-12 py-4 text-white"
+        id="installBtn" aria-label="installBtn" hidden>Installer Visiter le Québec</button>
+
+    </section>
+
   </main>
 
   <footer class="container grid grid-cols-12 mx-auto">
